--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -12,7 +12,7 @@ rules:
   - create
   - patch
 - apiGroups:
-  - postgres.rgeraskin.dev
+  - postgresql.rgeraskin.dev
   resources:
   - roles
   verbs:
@@ -22,13 +22,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - postgres.rgeraskin.dev
+  - postgresql.rgeraskin.dev
   resources:
   - roles/finalizers
   verbs:
   - update
 - apiGroups:
-  - postgres.rgeraskin.dev
+  - postgresql.rgeraskin.dev
   resources:
   - roles/status
   verbs:
